y.output
   0  $accept : program $end

   1  program : instructions
   2          |

   3  instructions : global_def
   4               | function_def
   5               | global_def instructions
   6               | function_def instructions

   7  global_def : global_var_def
   8             | vector_def

   9  global_var_def : scalar_type TK_IDENTIFIER '=' init_value ';'
  10                 | scalar_type '#' TK_IDENTIFIER '=' init_value ';'

  11  vector_def : scalar_type TK_IDENTIFIER '[' LIT_INTEGER ']' ';'
  12             | scalar_type TK_IDENTIFIER '[' LIT_INTEGER ']' '=' init_values_list ';'

  13  function_def : header block

  14  header : scalar_type TK_IDENTIFIER '(' def_parameters ')'

  15  def_parameters : scalar_type TK_IDENTIFIER
  16                 | tail_def_parameters
  17                 |

  18  tail_def_parameters : scalar_type TK_IDENTIFIER
  19                      | scalar_type TK_IDENTIFIER ',' tail_def_parameters

  20  block : '{' commands_list '}'

  21  commands_list : simple_command
  22                | simple_command ';' commands_list

  23  simple_command : block
  24                 | assignment_c
  25                 | flow_c
  26                 | read_c
  27                 | print_c
  28                 | return_c
  29                 |

  30  assignment_c : vector_assignment
  31               | var_assignment

  32  vector_assignment : TK_IDENTIFIER '[' expression ']' '=' expression

  33  var_assignment : TK_IDENTIFIER '=' expression

  34  read_c : KW_READ TK_IDENTIFIER

  35  print_c : KW_PRINT print_list

  36  print_list : LIT_STRING
  37             | arithmetic_expression
  38             | LIT_STRING ' ' print_list
  39             | arithmetic_expression ' ' print_list

  40  return_c : KW_RETURN expression

  41  expression : arithmetic_expression
  42             | boolean_expression
  43             | function_expression

  44  arithmetic_expression : id
  45                        | arithmetic_expression arithmetic_op arithmetic_expression
  46                        | '(' arithmetic_expression ')'

  47  boolean_expression : arithmetic_expression
  48                     | boolean_expression relational_op boolean_expression
  49                     | '!' boolean_expression
  50                     | '(' boolean_expression ')'

  51  id : TK_IDENTIFIER
  52     | '#' TK_IDENTIFIER
  53     | '&' TK_IDENTIFIER
  54     | TK_IDENTIFIER '[' expression ']'
  55     | init_value

  56  function_expression : TK_IDENTIFIER '(' parameters_list ')'

  57  parameters_list : id
  58                  | id ',' tail_parameters_list
  59                  |

  60  tail_parameters_list : id
  61                       | id ',' tail_parameters_list

  62  flow_c : if_c
  63         | if_then_else_c
  64         | while_c
  65         | for_c

  66  if_c : KW_IF '(' expression ')' KW_THEN flow_command

  67  if_then_else_c : KW_IF '(' expression ')' KW_THEN flow_command KW_ELSE flow_command

  68  while_c : KW_WHILE '(' expression ')' flow_command

  69  for_c : KW_FOR '(' TK_IDENTIFIER '=' expression KW_TO expression ')' flow_command

  70  flow_command : block
  71               | simple_command

  72  scalar_type : KW_CHAR
  73              | KW_INT
  74              | KW_FLOAT

  75  init_value : LIT_CHAR
  76             | LIT_INTEGER
  77             | LIT_REAL

  78  init_values_list : init_value
  79                   | init_value ':' init_values_list

  80  arithmetic_op : '*'
  81                | '\\'
  82                | '+'
  83                | '-'

  84  relational_op : OPERATOR_LE
  85                | OPERATOR_GE
  86                | OPERATOR_EQ
  87                | OPERATOR_NE
  88                | OPERATOR_AND
  89                | OPERATOR_OR
  90                | '<'
  91                | '>'
  92                | arithmetic_op

state 0
	$accept : . program $end  (0)
	program : .  (2)

	KW_CHAR  shift 1
	KW_INT  shift 2
	KW_FLOAT  shift 3
	$end  reduce 2

	program  goto 4
	instructions  goto 5
	global_def  goto 6
	function_def  goto 7
	global_var_def  goto 8
	vector_def  goto 9
	scalar_type  goto 10
	header  goto 11


state 1
	scalar_type : KW_CHAR .  (72)

	.  reduce 72


state 2
	scalar_type : KW_INT .  (73)

	.  reduce 73


state 3
	scalar_type : KW_FLOAT .  (74)

	.  reduce 74


state 4
	$accept : program . $end  (0)

	$end  accept


state 5
	program : instructions .  (1)

	.  reduce 1


state 6
	instructions : global_def .  (3)
	instructions : global_def . instructions  (5)

	KW_CHAR  shift 1
	KW_INT  shift 2
	KW_FLOAT  shift 3
	$end  reduce 3

	instructions  goto 12
	global_def  goto 6
	function_def  goto 7
	global_var_def  goto 8
	vector_def  goto 9
	scalar_type  goto 10
	header  goto 11


state 7
	instructions : function_def .  (4)
	instructions : function_def . instructions  (6)

	KW_CHAR  shift 1
	KW_INT  shift 2
	KW_FLOAT  shift 3
	$end  reduce 4

	instructions  goto 13
	global_def  goto 6
	function_def  goto 7
	global_var_def  goto 8
	vector_def  goto 9
	scalar_type  goto 10
	header  goto 11


state 8
	global_def : global_var_def .  (7)

	.  reduce 7


state 9
	global_def : vector_def .  (8)

	.  reduce 8


state 10
	global_var_def : scalar_type . TK_IDENTIFIER '=' init_value ';'  (9)
	global_var_def : scalar_type . '#' TK_IDENTIFIER '=' init_value ';'  (10)
	vector_def : scalar_type . TK_IDENTIFIER '[' LIT_INTEGER ']' ';'  (11)
	vector_def : scalar_type . TK_IDENTIFIER '[' LIT_INTEGER ']' '=' init_values_list ';'  (12)
	header : scalar_type . TK_IDENTIFIER '(' def_parameters ')'  (14)

	TK_IDENTIFIER  shift 14
	'#'  shift 15
	.  error


state 11
	function_def : header . block  (13)

	'{'  shift 16
	.  error

	block  goto 17


state 12
	instructions : global_def instructions .  (5)

	.  reduce 5


state 13
	instructions : function_def instructions .  (6)

	.  reduce 6


state 14
	global_var_def : scalar_type TK_IDENTIFIER . '=' init_value ';'  (9)
	vector_def : scalar_type TK_IDENTIFIER . '[' LIT_INTEGER ']' ';'  (11)
	vector_def : scalar_type TK_IDENTIFIER . '[' LIT_INTEGER ']' '=' init_values_list ';'  (12)
	header : scalar_type TK_IDENTIFIER . '(' def_parameters ')'  (14)

	'='  shift 18
	'['  shift 19
	'('  shift 20
	.  error


state 15
	global_var_def : scalar_type '#' . TK_IDENTIFIER '=' init_value ';'  (10)

	TK_IDENTIFIER  shift 21
	.  error


state 16
	block : '{' . commands_list '}'  (20)
	simple_command : .  (29)

	KW_IF  shift 22
	KW_WHILE  shift 23
	KW_FOR  shift 24
	KW_READ  shift 25
	KW_RETURN  shift 26
	KW_PRINT  shift 27
	TK_IDENTIFIER  shift 28
	'{'  shift 16
	';'  reduce 29
	'}'  reduce 29

	block  goto 29
	commands_list  goto 30
	simple_command  goto 31
	assignment_c  goto 32
	flow_c  goto 33
	read_c  goto 34
	print_c  goto 35
	return_c  goto 36
	vector_assignment  goto 37
	var_assignment  goto 38
	if_c  goto 39
	if_then_else_c  goto 40
	while_c  goto 41
	for_c  goto 42


state 17
	function_def : header block .  (13)

	.  reduce 13


state 18
	global_var_def : scalar_type TK_IDENTIFIER '=' . init_value ';'  (9)

	LIT_INTEGER  shift 43
	LIT_REAL  shift 44
	LIT_CHAR  shift 45
	.  error

	init_value  goto 46


state 19
	vector_def : scalar_type TK_IDENTIFIER '[' . LIT_INTEGER ']' ';'  (11)
	vector_def : scalar_type TK_IDENTIFIER '[' . LIT_INTEGER ']' '=' init_values_list ';'  (12)

	LIT_INTEGER  shift 47
	.  error


state 20
	header : scalar_type TK_IDENTIFIER '(' . def_parameters ')'  (14)
	def_parameters : .  (17)

	KW_CHAR  shift 1
	KW_INT  shift 2
	KW_FLOAT  shift 3
	')'  reduce 17

	scalar_type  goto 48
	def_parameters  goto 49
	tail_def_parameters  goto 50


state 21
	global_var_def : scalar_type '#' TK_IDENTIFIER . '=' init_value ';'  (10)

	'='  shift 51
	.  error


state 22
	if_c : KW_IF . '(' expression ')' KW_THEN flow_command  (66)
	if_then_else_c : KW_IF . '(' expression ')' KW_THEN flow_command KW_ELSE flow_command  (67)

	'('  shift 52
	.  error


state 23
	while_c : KW_WHILE . '(' expression ')' flow_command  (68)

	'('  shift 53
	.  error


state 24
	for_c : KW_FOR . '(' TK_IDENTIFIER '=' expression KW_TO expression ')' flow_command  (69)

	'('  shift 54
	.  error


state 25
	read_c : KW_READ . TK_IDENTIFIER  (34)

	TK_IDENTIFIER  shift 55
	.  error


state 26
	return_c : KW_RETURN . expression  (40)

	TK_IDENTIFIER  shift 56
	LIT_INTEGER  shift 43
	LIT_REAL  shift 44
	LIT_CHAR  shift 45
	'#'  shift 57
	'('  shift 58
	'!'  shift 59
	'&'  shift 60
	.  error

	init_value  goto 61
	expression  goto 62
	arithmetic_expression  goto 63
	boolean_expression  goto 64
	function_expression  goto 65
	id  goto 66


state 27
	print_c : KW_PRINT . print_list  (35)

	TK_IDENTIFIER  shift 67
	LIT_INTEGER  shift 43
	LIT_REAL  shift 44
	LIT_CHAR  shift 45
	LIT_STRING  shift 68
	'#'  shift 57
	'('  shift 69
	'&'  shift 60
	.  error

	init_value  goto 61
	print_list  goto 70
	arithmetic_expression  goto 71
	id  goto 66


state 28
	vector_assignment : TK_IDENTIFIER . '[' expression ']' '=' expression  (32)
	var_assignment : TK_IDENTIFIER . '=' expression  (33)

	'='  shift 72
	'['  shift 73
	.  error


state 29
	simple_command : block .  (23)

	.  reduce 23


state 30
	block : '{' commands_list . '}'  (20)

	'}'  shift 74
	.  error


state 31
	commands_list : simple_command .  (21)
	commands_list : simple_command . ';' commands_list  (22)

	';'  shift 75
	'}'  reduce 21


state 32
	simple_command : assignment_c .  (24)

	.  reduce 24


state 33
	simple_command : flow_c .  (25)

	.  reduce 25


state 34
	simple_command : read_c .  (26)

	.  reduce 26


state 35
	simple_command : print_c .  (27)

	.  reduce 27


state 36
	simple_command : return_c .  (28)

	.  reduce 28


state 37
	assignment_c : vector_assignment .  (30)

	.  reduce 30


state 38
	assignment_c : var_assignment .  (31)

	.  reduce 31


state 39
	flow_c : if_c .  (62)

	.  reduce 62


state 40
	flow_c : if_then_else_c .  (63)

	.  reduce 63


state 41
	flow_c : while_c .  (64)

	.  reduce 64


state 42
	flow_c : for_c .  (65)

	.  reduce 65


state 43
	init_value : LIT_INTEGER .  (76)

	.  reduce 76


state 44
	init_value : LIT_REAL .  (77)

	.  reduce 77


state 45
	init_value : LIT_CHAR .  (75)

	.  reduce 75


state 46
	global_var_def : scalar_type TK_IDENTIFIER '=' init_value . ';'  (9)

	';'  shift 76
	.  error


state 47
	vector_def : scalar_type TK_IDENTIFIER '[' LIT_INTEGER . ']' ';'  (11)
	vector_def : scalar_type TK_IDENTIFIER '[' LIT_INTEGER . ']' '=' init_values_list ';'  (12)

	']'  shift 77
	.  error


state 48
	def_parameters : scalar_type . TK_IDENTIFIER  (15)
	tail_def_parameters : scalar_type . TK_IDENTIFIER  (18)
	tail_def_parameters : scalar_type . TK_IDENTIFIER ',' tail_def_parameters  (19)

	TK_IDENTIFIER  shift 78
	.  error


state 49
	header : scalar_type TK_IDENTIFIER '(' def_parameters . ')'  (14)

	')'  shift 79
	.  error


state 50
	def_parameters : tail_def_parameters .  (16)

	.  reduce 16


state 51
	global_var_def : scalar_type '#' TK_IDENTIFIER '=' . init_value ';'  (10)

	LIT_INTEGER  shift 43
	LIT_REAL  shift 44
	LIT_CHAR  shift 45
	.  error

	init_value  goto 80


state 52
	if_c : KW_IF '(' . expression ')' KW_THEN flow_command  (66)
	if_then_else_c : KW_IF '(' . expression ')' KW_THEN flow_command KW_ELSE flow_command  (67)

	TK_IDENTIFIER  shift 56
	LIT_INTEGER  shift 43
	LIT_REAL  shift 44
	LIT_CHAR  shift 45
	'#'  shift 57
	'('  shift 58
	'!'  shift 59
	'&'  shift 60
	.  error

	init_value  goto 61
	expression  goto 81
	arithmetic_expression  goto 63
	boolean_expression  goto 64
	function_expression  goto 65
	id  goto 66


state 53
	while_c : KW_WHILE '(' . expression ')' flow_command  (68)

	TK_IDENTIFIER  shift 56
	LIT_INTEGER  shift 43
	LIT_REAL  shift 44
	LIT_CHAR  shift 45
	'#'  shift 57
	'('  shift 58
	'!'  shift 59
	'&'  shift 60
	.  error

	init_value  goto 61
	expression  goto 82
	arithmetic_expression  goto 63
	boolean_expression  goto 64
	function_expression  goto 65
	id  goto 66


state 54
	for_c : KW_FOR '(' . TK_IDENTIFIER '=' expression KW_TO expression ')' flow_command  (69)

	TK_IDENTIFIER  shift 83
	.  error


state 55
	read_c : KW_READ TK_IDENTIFIER .  (34)

	.  reduce 34


state 56
	id : TK_IDENTIFIER .  (51)
	id : TK_IDENTIFIER . '[' expression ']'  (54)
	function_expression : TK_IDENTIFIER . '(' parameters_list ')'  (56)

	'['  shift 84
	'('  shift 85
	KW_ELSE  reduce 51
	KW_TO  reduce 51
	OPERATOR_LE  reduce 51
	OPERATOR_GE  reduce 51
	OPERATOR_EQ  reduce 51
	OPERATOR_NE  reduce 51
	OPERATOR_AND  reduce 51
	OPERATOR_OR  reduce 51
	';'  reduce 51
	']'  reduce 51
	')'  reduce 51
	'}'  reduce 51
	'*'  reduce 51
	'\\'  reduce 51
	'+'  reduce 51
	'-'  reduce 51
	'<'  reduce 51
	'>'  reduce 51


state 57
	id : '#' . TK_IDENTIFIER  (52)

	TK_IDENTIFIER  shift 86
	.  error


state 58
	arithmetic_expression : '(' . arithmetic_expression ')'  (46)
	boolean_expression : '(' . boolean_expression ')'  (50)

	TK_IDENTIFIER  shift 67
	LIT_INTEGER  shift 43
	LIT_REAL  shift 44
	LIT_CHAR  shift 45
	'#'  shift 57
	'('  shift 58
	'!'  shift 59
	'&'  shift 60
	.  error

	init_value  goto 61
	arithmetic_expression  goto 87
	boolean_expression  goto 88
	id  goto 66


state 59
	boolean_expression : '!' . boolean_expression  (49)

	TK_IDENTIFIER  shift 67
	LIT_INTEGER  shift 43
	LIT_REAL  shift 44
	LIT_CHAR  shift 45
	'#'  shift 57
	'('  shift 58
	'!'  shift 59
	'&'  shift 60
	.  error

	init_value  goto 61
	arithmetic_expression  goto 89
	boolean_expression  goto 90
	id  goto 66


state 60
	id : '&' . TK_IDENTIFIER  (53)

	TK_IDENTIFIER  shift 91
	.  error


state 61
	id : init_value .  (55)

	.  reduce 55


state 62
	return_c : KW_RETURN expression .  (40)

	.  reduce 40


63: reduce/reduce conflict (reduce 41, reduce 47) on KW_ELSE
63: reduce/reduce conflict (reduce 41, reduce 47) on KW_TO
63: reduce/reduce conflict (reduce 41, reduce 47) on ';'
63: reduce/reduce conflict (reduce 41, reduce 47) on ']'
63: reduce/reduce conflict (reduce 41, reduce 47) on ')'
63: reduce/reduce conflict (reduce 41, reduce 47) on '}'
63: shift/reduce conflict (shift 92, reduce 47) on '*'
63: shift/reduce conflict (shift 93, reduce 47) on '\\'
63: shift/reduce conflict (shift 94, reduce 47) on '+'
63: shift/reduce conflict (shift 95, reduce 47) on '-'
state 63
	expression : arithmetic_expression .  (41)
	arithmetic_expression : arithmetic_expression . arithmetic_op arithmetic_expression  (45)
	boolean_expression : arithmetic_expression .  (47)

	'*'  shift 92
	'\\'  shift 93
	'+'  shift 94
	'-'  shift 95
	KW_ELSE  reduce 41
	KW_TO  reduce 41
	OPERATOR_LE  reduce 47
	OPERATOR_GE  reduce 47
	OPERATOR_EQ  reduce 47
	OPERATOR_NE  reduce 47
	OPERATOR_AND  reduce 47
	OPERATOR_OR  reduce 47
	';'  reduce 41
	']'  reduce 41
	')'  reduce 41
	'}'  reduce 41
	'<'  reduce 47
	'>'  reduce 47

	arithmetic_op  goto 96


state 64
	expression : boolean_expression .  (42)
	boolean_expression : boolean_expression . relational_op boolean_expression  (48)

	OPERATOR_LE  shift 97
	OPERATOR_GE  shift 98
	OPERATOR_EQ  shift 99
	OPERATOR_NE  shift 100
	OPERATOR_AND  shift 101
	OPERATOR_OR  shift 102
	'*'  shift 92
	'\\'  shift 93
	'+'  shift 94
	'-'  shift 95
	'<'  shift 103
	'>'  shift 104
	KW_ELSE  reduce 42
	KW_TO  reduce 42
	';'  reduce 42
	']'  reduce 42
	')'  reduce 42
	'}'  reduce 42

	arithmetic_op  goto 105
	relational_op  goto 106


state 65
	expression : function_expression .  (43)

	.  reduce 43


state 66
	arithmetic_expression : id .  (44)

	.  reduce 44


state 67
	id : TK_IDENTIFIER .  (51)
	id : TK_IDENTIFIER . '[' expression ']'  (54)

	'['  shift 84
	KW_ELSE  reduce 51
	KW_TO  reduce 51
	OPERATOR_LE  reduce 51
	OPERATOR_GE  reduce 51
	OPERATOR_EQ  reduce 51
	OPERATOR_NE  reduce 51
	OPERATOR_AND  reduce 51
	OPERATOR_OR  reduce 51
	';'  reduce 51
	']'  reduce 51
	')'  reduce 51
	','  reduce 51
	'}'  reduce 51
	' '  reduce 51
	'*'  reduce 51
	'\\'  reduce 51
	'+'  reduce 51
	'-'  reduce 51
	'<'  reduce 51
	'>'  reduce 51


state 68
	print_list : LIT_STRING .  (36)
	print_list : LIT_STRING . ' ' print_list  (38)

	' '  shift 107
	KW_ELSE  reduce 36
	';'  reduce 36
	'}'  reduce 36


state 69
	arithmetic_expression : '(' . arithmetic_expression ')'  (46)

	TK_IDENTIFIER  shift 67
	LIT_INTEGER  shift 43
	LIT_REAL  shift 44
	LIT_CHAR  shift 45
	'#'  shift 57
	'('  shift 69
	'&'  shift 60
	.  error

	init_value  goto 61
	arithmetic_expression  goto 108
	id  goto 66


state 70
	print_c : KW_PRINT print_list .  (35)

	.  reduce 35


state 71
	print_list : arithmetic_expression .  (37)
	print_list : arithmetic_expression . ' ' print_list  (39)
	arithmetic_expression : arithmetic_expression . arithmetic_op arithmetic_expression  (45)

	' '  shift 109
	'*'  shift 92
	'\\'  shift 93
	'+'  shift 94
	'-'  shift 95
	KW_ELSE  reduce 37
	';'  reduce 37
	'}'  reduce 37

	arithmetic_op  goto 96


state 72
	var_assignment : TK_IDENTIFIER '=' . expression  (33)

	TK_IDENTIFIER  shift 56
	LIT_INTEGER  shift 43
	LIT_REAL  shift 44
	LIT_CHAR  shift 45
	'#'  shift 57
	'('  shift 58
	'!'  shift 59
	'&'  shift 60
	.  error

	init_value  goto 61
	expression  goto 110
	arithmetic_expression  goto 63
	boolean_expression  goto 64
	function_expression  goto 65
	id  goto 66


state 73
	vector_assignment : TK_IDENTIFIER '[' . expression ']' '=' expression  (32)

	TK_IDENTIFIER  shift 56
	LIT_INTEGER  shift 43
	LIT_REAL  shift 44
	LIT_CHAR  shift 45
	'#'  shift 57
	'('  shift 58
	'!'  shift 59
	'&'  shift 60
	.  error

	init_value  goto 61
	expression  goto 111
	arithmetic_expression  goto 63
	boolean_expression  goto 64
	function_expression  goto 65
	id  goto 66


state 74
	block : '{' commands_list '}' .  (20)

	.  reduce 20


state 75
	commands_list : simple_command ';' . commands_list  (22)
	simple_command : .  (29)

	KW_IF  shift 22
	KW_WHILE  shift 23
	KW_FOR  shift 24
	KW_READ  shift 25
	KW_RETURN  shift 26
	KW_PRINT  shift 27
	TK_IDENTIFIER  shift 28
	'{'  shift 16
	';'  reduce 29
	'}'  reduce 29

	block  goto 29
	commands_list  goto 112
	simple_command  goto 31
	assignment_c  goto 32
	flow_c  goto 33
	read_c  goto 34
	print_c  goto 35
	return_c  goto 36
	vector_assignment  goto 37
	var_assignment  goto 38
	if_c  goto 39
	if_then_else_c  goto 40
	while_c  goto 41
	for_c  goto 42


state 76
	global_var_def : scalar_type TK_IDENTIFIER '=' init_value ';' .  (9)

	.  reduce 9


state 77
	vector_def : scalar_type TK_IDENTIFIER '[' LIT_INTEGER ']' . ';'  (11)
	vector_def : scalar_type TK_IDENTIFIER '[' LIT_INTEGER ']' . '=' init_values_list ';'  (12)

	'='  shift 113
	';'  shift 114
	.  error


78: reduce/reduce conflict (reduce 15, reduce 18) on ')'
state 78
	def_parameters : scalar_type TK_IDENTIFIER .  (15)
	tail_def_parameters : scalar_type TK_IDENTIFIER .  (18)
	tail_def_parameters : scalar_type TK_IDENTIFIER . ',' tail_def_parameters  (19)

	','  shift 115
	')'  reduce 15


state 79
	header : scalar_type TK_IDENTIFIER '(' def_parameters ')' .  (14)

	.  reduce 14


state 80
	global_var_def : scalar_type '#' TK_IDENTIFIER '=' init_value . ';'  (10)

	';'  shift 116
	.  error


state 81
	if_c : KW_IF '(' expression . ')' KW_THEN flow_command  (66)
	if_then_else_c : KW_IF '(' expression . ')' KW_THEN flow_command KW_ELSE flow_command  (67)

	')'  shift 117
	.  error


state 82
	while_c : KW_WHILE '(' expression . ')' flow_command  (68)

	')'  shift 118
	.  error


state 83
	for_c : KW_FOR '(' TK_IDENTIFIER . '=' expression KW_TO expression ')' flow_command  (69)

	'='  shift 119
	.  error


state 84
	id : TK_IDENTIFIER '[' . expression ']'  (54)

	TK_IDENTIFIER  shift 56
	LIT_INTEGER  shift 43
	LIT_REAL  shift 44
	LIT_CHAR  shift 45
	'#'  shift 57
	'('  shift 58
	'!'  shift 59
	'&'  shift 60
	.  error

	init_value  goto 61
	expression  goto 120
	arithmetic_expression  goto 63
	boolean_expression  goto 64
	function_expression  goto 65
	id  goto 66


state 85
	function_expression : TK_IDENTIFIER '(' . parameters_list ')'  (56)
	parameters_list : .  (59)

	TK_IDENTIFIER  shift 67
	LIT_INTEGER  shift 43
	LIT_REAL  shift 44
	LIT_CHAR  shift 45
	'#'  shift 57
	'&'  shift 60
	')'  reduce 59

	init_value  goto 61
	id  goto 121
	parameters_list  goto 122


state 86
	id : '#' TK_IDENTIFIER .  (52)

	.  reduce 52


87: shift/reduce conflict (shift 123, reduce 47) on ')'
87: shift/reduce conflict (shift 92, reduce 47) on '*'
87: shift/reduce conflict (shift 93, reduce 47) on '\\'
87: shift/reduce conflict (shift 94, reduce 47) on '+'
87: shift/reduce conflict (shift 95, reduce 47) on '-'
state 87
	arithmetic_expression : arithmetic_expression . arithmetic_op arithmetic_expression  (45)
	arithmetic_expression : '(' arithmetic_expression . ')'  (46)
	boolean_expression : arithmetic_expression .  (47)

	')'  shift 123
	'*'  shift 92
	'\\'  shift 93
	'+'  shift 94
	'-'  shift 95
	OPERATOR_LE  reduce 47
	OPERATOR_GE  reduce 47
	OPERATOR_EQ  reduce 47
	OPERATOR_NE  reduce 47
	OPERATOR_AND  reduce 47
	OPERATOR_OR  reduce 47
	'<'  reduce 47
	'>'  reduce 47

	arithmetic_op  goto 96


state 88
	boolean_expression : boolean_expression . relational_op boolean_expression  (48)
	boolean_expression : '(' boolean_expression . ')'  (50)

	OPERATOR_LE  shift 97
	OPERATOR_GE  shift 98
	OPERATOR_EQ  shift 99
	OPERATOR_NE  shift 100
	OPERATOR_AND  shift 101
	OPERATOR_OR  shift 102
	')'  shift 124
	'*'  shift 92
	'\\'  shift 93
	'+'  shift 94
	'-'  shift 95
	'<'  shift 103
	'>'  shift 104
	.  error

	arithmetic_op  goto 105
	relational_op  goto 106


89: shift/reduce conflict (shift 92, reduce 47) on '*'
89: shift/reduce conflict (shift 93, reduce 47) on '\\'
89: shift/reduce conflict (shift 94, reduce 47) on '+'
89: shift/reduce conflict (shift 95, reduce 47) on '-'
state 89
	arithmetic_expression : arithmetic_expression . arithmetic_op arithmetic_expression  (45)
	boolean_expression : arithmetic_expression .  (47)

	'*'  shift 92
	'\\'  shift 93
	'+'  shift 94
	'-'  shift 95
	KW_ELSE  reduce 47
	KW_TO  reduce 47
	OPERATOR_LE  reduce 47
	OPERATOR_GE  reduce 47
	OPERATOR_EQ  reduce 47
	OPERATOR_NE  reduce 47
	OPERATOR_AND  reduce 47
	OPERATOR_OR  reduce 47
	';'  reduce 47
	']'  reduce 47
	')'  reduce 47
	'}'  reduce 47
	'<'  reduce 47
	'>'  reduce 47

	arithmetic_op  goto 96


90: shift/reduce conflict (shift 97, reduce 49) on OPERATOR_LE
90: shift/reduce conflict (shift 98, reduce 49) on OPERATOR_GE
90: shift/reduce conflict (shift 99, reduce 49) on OPERATOR_EQ
90: shift/reduce conflict (shift 100, reduce 49) on OPERATOR_NE
90: shift/reduce conflict (shift 101, reduce 49) on OPERATOR_AND
90: shift/reduce conflict (shift 102, reduce 49) on OPERATOR_OR
90: shift/reduce conflict (shift 92, reduce 49) on '*'
90: shift/reduce conflict (shift 93, reduce 49) on '\\'
90: shift/reduce conflict (shift 94, reduce 49) on '+'
90: shift/reduce conflict (shift 95, reduce 49) on '-'
90: shift/reduce conflict (shift 103, reduce 49) on '<'
90: shift/reduce conflict (shift 104, reduce 49) on '>'
state 90
	boolean_expression : boolean_expression . relational_op boolean_expression  (48)
	boolean_expression : '!' boolean_expression .  (49)

	OPERATOR_LE  shift 97
	OPERATOR_GE  shift 98
	OPERATOR_EQ  shift 99
	OPERATOR_NE  shift 100
	OPERATOR_AND  shift 101
	OPERATOR_OR  shift 102
	'*'  shift 92
	'\\'  shift 93
	'+'  shift 94
	'-'  shift 95
	'<'  shift 103
	'>'  shift 104
	KW_ELSE  reduce 49
	KW_TO  reduce 49
	';'  reduce 49
	']'  reduce 49
	')'  reduce 49
	'}'  reduce 49

	arithmetic_op  goto 105
	relational_op  goto 106


state 91
	id : '&' TK_IDENTIFIER .  (53)

	.  reduce 53


state 92
	arithmetic_op : '*' .  (80)

	.  reduce 80


state 93
	arithmetic_op : '\\' .  (81)

	.  reduce 81


state 94
	arithmetic_op : '+' .  (82)

	.  reduce 82


state 95
	arithmetic_op : '-' .  (83)

	.  reduce 83


state 96
	arithmetic_expression : arithmetic_expression arithmetic_op . arithmetic_expression  (45)

	TK_IDENTIFIER  shift 67
	LIT_INTEGER  shift 43
	LIT_REAL  shift 44
	LIT_CHAR  shift 45
	'#'  shift 57
	'('  shift 69
	'&'  shift 60
	.  error

	init_value  goto 61
	arithmetic_expression  goto 125
	id  goto 66


state 97
	relational_op : OPERATOR_LE .  (84)

	.  reduce 84


state 98
	relational_op : OPERATOR_GE .  (85)

	.  reduce 85


state 99
	relational_op : OPERATOR_EQ .  (86)

	.  reduce 86


state 100
	relational_op : OPERATOR_NE .  (87)

	.  reduce 87


state 101
	relational_op : OPERATOR_AND .  (88)

	.  reduce 88


state 102
	relational_op : OPERATOR_OR .  (89)

	.  reduce 89


state 103
	relational_op : '<' .  (90)

	.  reduce 90


state 104
	relational_op : '>' .  (91)

	.  reduce 91


state 105
	relational_op : arithmetic_op .  (92)

	.  reduce 92


state 106
	boolean_expression : boolean_expression relational_op . boolean_expression  (48)

	TK_IDENTIFIER  shift 67
	LIT_INTEGER  shift 43
	LIT_REAL  shift 44
	LIT_CHAR  shift 45
	'#'  shift 57
	'('  shift 58
	'!'  shift 59
	'&'  shift 60
	.  error

	init_value  goto 61
	arithmetic_expression  goto 89
	boolean_expression  goto 126
	id  goto 66


state 107
	print_list : LIT_STRING ' ' . print_list  (38)

	TK_IDENTIFIER  shift 67
	LIT_INTEGER  shift 43
	LIT_REAL  shift 44
	LIT_CHAR  shift 45
	LIT_STRING  shift 68
	'#'  shift 57
	'('  shift 69
	'&'  shift 60
	.  error

	init_value  goto 61
	print_list  goto 127
	arithmetic_expression  goto 71
	id  goto 66


state 108
	arithmetic_expression : arithmetic_expression . arithmetic_op arithmetic_expression  (45)
	arithmetic_expression : '(' arithmetic_expression . ')'  (46)

	')'  shift 123
	'*'  shift 92
	'\\'  shift 93
	'+'  shift 94
	'-'  shift 95
	.  error

	arithmetic_op  goto 96


state 109
	print_list : arithmetic_expression ' ' . print_list  (39)

	TK_IDENTIFIER  shift 67
	LIT_INTEGER  shift 43
	LIT_REAL  shift 44
	LIT_CHAR  shift 45
	LIT_STRING  shift 68
	'#'  shift 57
	'('  shift 69
	'&'  shift 60
	.  error

	init_value  goto 61
	print_list  goto 128
	arithmetic_expression  goto 71
	id  goto 66


state 110
	var_assignment : TK_IDENTIFIER '=' expression .  (33)

	.  reduce 33


state 111
	vector_assignment : TK_IDENTIFIER '[' expression . ']' '=' expression  (32)

	']'  shift 129
	.  error


state 112
	commands_list : simple_command ';' commands_list .  (22)

	.  reduce 22


state 113
	vector_def : scalar_type TK_IDENTIFIER '[' LIT_INTEGER ']' '=' . init_values_list ';'  (12)

	LIT_INTEGER  shift 43
	LIT_REAL  shift 44
	LIT_CHAR  shift 45
	.  error

	init_value  goto 130
	init_values_list  goto 131


state 114
	vector_def : scalar_type TK_IDENTIFIER '[' LIT_INTEGER ']' ';' .  (11)

	.  reduce 11


state 115
	tail_def_parameters : scalar_type TK_IDENTIFIER ',' . tail_def_parameters  (19)

	KW_CHAR  shift 1
	KW_INT  shift 2
	KW_FLOAT  shift 3
	.  error

	scalar_type  goto 132
	tail_def_parameters  goto 133


state 116
	global_var_def : scalar_type '#' TK_IDENTIFIER '=' init_value ';' .  (10)

	.  reduce 10


state 117
	if_c : KW_IF '(' expression ')' . KW_THEN flow_command  (66)
	if_then_else_c : KW_IF '(' expression ')' . KW_THEN flow_command KW_ELSE flow_command  (67)

	KW_THEN  shift 134
	.  error


state 118
	while_c : KW_WHILE '(' expression ')' . flow_command  (68)
	simple_command : .  (29)

	KW_IF  shift 22
	KW_WHILE  shift 23
	KW_FOR  shift 24
	KW_READ  shift 25
	KW_RETURN  shift 26
	KW_PRINT  shift 27
	TK_IDENTIFIER  shift 28
	'{'  shift 16
	KW_ELSE  reduce 29
	';'  reduce 29
	'}'  reduce 29

	block  goto 135
	simple_command  goto 136
	assignment_c  goto 32
	flow_c  goto 33
	read_c  goto 34
	print_c  goto 35
	return_c  goto 36
	vector_assignment  goto 37
	var_assignment  goto 38
	if_c  goto 39
	if_then_else_c  goto 40
	while_c  goto 41
	for_c  goto 42
	flow_command  goto 137


state 119
	for_c : KW_FOR '(' TK_IDENTIFIER '=' . expression KW_TO expression ')' flow_command  (69)
